--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -5,57 +5,52 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin portal</title>
+    <title>Dashboard</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div id="head" class="text-center">
-        <h1>eVote</h1>
-        <div class=" d-inline">
-            <h3 class="primary">Admin Portal</h3>
-            <a href="./index.html" target="_blank">vote</a>
-            <a href="./admin.html" target="_blank">Admin</a>
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #212529;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">eVote</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav ">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link " href="./admin.html" target="_blank">Admin</a>
+                    <a class="nav-link " href="./index.html" target="_blank">vote</a>
+                </div>
+            </div>
         </div>
+    </nav>
+    <div class="text-center">
+        <h4>Live stats</h4>
+    </div>
+    <div id="candidate" class="container mt-5">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Party</th>
+                    <th>Total Vote</th>
+                </tr>
+            </thead>
+            <tbody id="boxCandidate"></tbody>
+        </table>
         <hr />
         <br />
     </div>
 
-    <div class="container">
-        <legend>Add Candidate</legend>
-        <table class="table text-center">
-            <tr>
-                <th>Name </th>
-                <td> <input id="name" type="text" name="name" placeholder="Candidates name"></td>
-                <th>Party</th>
-                <td><input id="party" type="text" name="party" placeholder="Candidates party"></td>
-            </tr>
-        </table>
-        <input id="addCandidate" type="submit" name="submit" value="Add Candidate">
-        <p id="Aday"></p>
-    </div>
-
-    <div class="container">
-        <legend>Define Voting Dates</legend>
-        <table class="table text-center">
-            <tr>
-                <th>Start date</th>
-                <td><input id="startDate" type="date" name=""></td>
-                <th>End date</th>
-                <td> <input id="endDate" type="date" name=""></td>
-            </tr>
-        </table>
-        <input id="addDate" type="submit" name="submit" value="Define Dates">
-        <p id="Aday"></p>
-    </div>
-
-
-    <footer class="footer mt-auto py-3 bg-light" style="position: absolute;bottom:0">
+    <footer class="footer mt-auto py-3" style="position:absolute;background-color: #212529;
+    color: #fff; bottom: 0;width:100%">
         <div class="container">
-            <div class="text-muted">CSB19057</div>
-            <div class="text-muted">PRASANJIT DUTTA</div>
+            <div>CSB19057</div>
+            <div>PRASANJIT DUTTA</div>
         </div>
     </footer>
 
