--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,34 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>eVote</title>
-
+  <title>eVote- vote</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
 <body>
-  <div id="head" class="text-center">
-    <h1>eVote</h1>
-    <div class=" d-inline">
-      <h3 class="primary">Admin Portal</h3>
-      <a href="./dashboard.html" target="_blank">Dashboard</a>
-      <a href="./admin.html" target="_blank">Admin</a>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #212529;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">eVote</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav ">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link " href="./dashboard.html" target="_blank">Dashboard</a>
+          <a class="nav-link " href="./admin.html" target="_blank">Admin</a>
+        </div>
+      </div>
     </div>
-    <p> Welcome for Voting</p>
-    <p>Voting Dates: <span id="dates"></span></p>
-    <hr />
-    <br />
+  </nav>
+  <div class="text-center">
+    <h4>Elect your candidate</h4>
   </div>
-  <div id="candidate" class="container">
-    <table class="table text-center">
+  <div id="candidate" class="container mt-5 mb-5">
+    <table class="table ">
       <thead>
         <tr>
           <th>Name</th>
@@ -39,8 +46,10 @@
     <br />
   </div>
   <div id="vote" class="container text-center">
-    <p>Please select one of the candidates and click the vote button.</p>
-    <button id="voteButton" class="btn btn-primary" onclick="App.vote()" disabled>Vote</button>
+    <p>Please select one of the candidates and click the vote button. If you select multiple candidates, then only the
+      first candidate will be selected for the vote </p>
+    <button id="voteButton" style="background-color: #1710a6;" class="btn btn-primary mt-2" onclick="App.vote()"
+      disabled>Vote</button>
     <div id="msg"></div>
 
     <hr />
@@ -53,10 +62,11 @@
     <p id="accountAddress" class="text-center"></p>
   </div>
 
-  <footer class="footer mt-auto py-3 bg-light" style="position: absolute;bottom:0">
+  <footer class="footer mt-auto py-3" style="position:absolute; background-color: #212529;
+  color: #fff;bottom: 0;width:100%">
     <div class="container">
-      <div class="text-muted">CSB19057</div>
-      <div class="text-muted">PRASANJIT DUTTA</div>
+      <div>CSB19057</div>
+      <div>PRASANJIT DUTTA</div>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
